Successful setup of the Websocket Server