@@ -26,14 +26,16 @@ dependencies {
 
     // Webserver Dependencies
     // https://mvnrepository.com/artifact/jakarta.websocket/jakarta.websocket-api
-    compileOnly("jakarta.websocket:jakarta.websocket-api:2.2.0")
+    implementation("jakarta.websocket:jakarta.websocket-api:2.2.0")
     // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
-    compileOnly("jakarta.servlet:jakarta.servlet-api:6.1.0")
+    implementation("jakarta.servlet:jakarta.servlet-api:6.1.0")
     // https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-server
     implementation("org.glassfish.tyrus:tyrus-server:2.1.5")
     // https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-container-grizzly-server
-    //implementation("org.glassfish.tyrus:tyrus-container-grizzly-server:2.1.5")
-    implementation(files("$projectDir/libs/tyrus-container-grizzly-server-2.1.5.jar"))
+    implementation("org.glassfish.tyrus:tyrus-container-grizzly-server:2.1.5")
+    ///implementation(files("$projectDir/libs/tyrus-container-grizzly-server-2.1.5.jar"))
+    //implementation((fileTree("libs")))
+
 
 
     // Testing Setup
@@ -66,12 +68,8 @@ changelog {
 }
 
 // Configure Gradle Kover Plugin - read more: https://github.com/Kotlin/kotlinx-kover#configuration
-koverReport {
-    defaults {
-        xml {
-            onCheck = true
-        }
-    }
+kover {
+
 }
 
 tasks {
@@ -140,9 +138,10 @@ tasks {
         channels = properties("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
     }
 
+    runIde {
+        jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+    }
+
 }
 
-tasks.withType<Jar> {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    from(configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) })
-}
+
